- add messages endpoints - update swagger for endpoints
